[Core] update workflows

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,6 +15,13 @@ jobs:
     strategy:
       matrix:
         php-versions: ['8.1']
+        composer-flags: ['', '--prefer-lowest']
+        experimental: [false]
+        include:
+          - php-versions: '8.2'
+            experimental: true
+            composer-flags: '--ignore-platform-reqs'
+
 
     services:
       mongo:
@@ -94,7 +101,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          composer install --prefer-dist
+          composer update ${{ matrix.composer-flags }}
 
       - name: Code Style
         run: |
