[Core] Bump dependency versions

--- a/composer.json
+++ b/composer.json
@@ -5,85 +5,84 @@
         "php": ">=8.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "doctrine/doctrine-migrations-bundle": "^3.0",
-        "doctrine/orm": "^2.7",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "doctrine/orm": "^2.13",
         "knplabs/knp-snappy": "^1.4",
-        "ramsey/uuid-doctrine": "^1.6",
-        "symfony/console": "^6.0",
-        "symfony/dotenv": "^5.2",
-        "symfony/flex": "^1.3.1",
-        "symfony/form": "^6.0",
-        "symfony/framework-bundle": "^6.0",
+        "ramsey/uuid-doctrine": "^1.8",
+        "symfony/console": "^6.1",
+        "symfony/dotenv": "^6.1",
+        "symfony/flex": "^1.19",
+        "symfony/form": "^6.1",
+        "symfony/framework-bundle": "^6.1",
         "symfony/mailer": "6.*",
-        "symfony/monolog-bundle": "^3.6",
-        "symfony/security-bundle": "^6.0",
-        "symfony/translation": "^6.0",
-        "symfony/twig-bundle": "^6.0",
-        "symfony/webpack-encore-bundle": "^1.12",
-        "symfony/yaml": "^6.0",
+        "symfony/monolog-bundle": "^3.8",
+        "symfony/security-bundle": "^6.1",
+        "symfony/translation": "^6.1",
+        "symfony/twig-bundle": "^6.1",
+        "symfony/webpack-encore-bundle": "^1.15",
+        "symfony/yaml": "^6.1",
         "brick/money": "^0.5.0",
         "chadhutchins/oauth2-slack": "^1.2",
-        "doctrine/doctrine-migrations-bundle": "^3.0",
-        "doctrine/orm": "^2.7",
-        "elasticsearch/elasticsearch": "^7.15",
-        "graylog2/gelf-php": "^1.6",
-        "guzzlehttp/guzzle": "^7.0",
-        "knplabs/knp-snappy": "^1.2",
-        "monolog/monolog": "^2.1",
-        "nyholm/psr7": "^1.4",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "elasticsearch/elasticsearch": "^7.17",
+        "graylog2/gelf-php": "^1.7",
+        "guzzlehttp/guzzle": "^7.5",
+        "knplabs/knp-snappy": "^1.4",
+        "monolog/monolog": "^2.8",
+        "nyholm/psr7": "^1.5",
         "psr/http-client": "^1.0",
         "psr/http-message": "^1.0",
-        "ramsey/uuid-doctrine": "^1.6",
-        "sendgrid/sendgrid": "~7",
+        "ramsey/uuid-doctrine": "^1.8",
+        "sendgrid/sendgrid": "~7.11",
         "sensio/framework-extra-bundle": "^6.1",
-        "stripe/stripe-php": "^7.57",
-        "symfony/asset": "^6.0",
-        "symfony/console": "^6.0",
-        "symfony/dotenv": "^6.0",
-        "symfony/event-dispatcher": "^6.0",
-        "symfony/expression-language": "^6.0",
-        "symfony/flex": "^1.3.1",
-        "symfony/form": "^6.0",
-        "symfony/framework-bundle": "^6.0",
-        "symfony/mailer": "^6.0",
-        "symfony/monolog-bundle": ">=v3.7.0",
-        "symfony/security-bundle": "^6.0",
-        "symfony/twig-bundle": "^6.0",
-        "symfony/validator": "^6.0",
-        "symfony/yaml": "^6.0",
-        "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "stripe/stripe-php": "^7.128",
+        "symfony/asset": "^6.1",
+        "symfony/console": "^6.1",
+        "symfony/dotenv": "^6.1",
+        "symfony/event-dispatcher": "^6.1",
+        "symfony/expression-language": "^6.1",
+        "symfony/flex": "^1.19.1",
+        "symfony/form": "^6.1",
+        "symfony/framework-bundle": "^6.1",
+        "symfony/mailer": "^6.1",
+        "symfony/monolog-bundle": ">=v3.8",
+        "symfony/security-bundle": "^6.1",
+        "symfony/twig-bundle": "^6.1",
+        "symfony/validator": "^6.1",
+        "symfony/yaml": "^6.1",
+        "twig/extra-bundle": "^3.4",
+        "twig/twig": "^3.4"
     },
     "require-dev": {
-        "behat/behat": "^3.7",
+        "behat/behat": "^3.11",
         "behat/mink": "^1.8",
         "dg/bypass-finals": "~1.3.0",
-        "doctrine/mongodb-odm-bundle": "^4.3",
-        "doctrine/orm": "^2.9.3",
-        "friends-of-behat/mink": "^1.8",
+        "doctrine/mongodb-odm-bundle": "^4.5",
+        "doctrine/orm": "^2.13.3",
+        "friends-of-behat/mink": "^1.10",
         "friends-of-behat/mink-browserkit-driver": "^1.4",
-        "friends-of-behat/mink-extension": "^2.4",
-        "friends-of-behat/symfony-extension": "^2.0",
-        "friendsofphp/php-cs-fixer": "^3.0",
-        "guzzlehttp/guzzle": "^7.0",
-        "knplabs/knp-snappy": "^1.2",
-        "league/flysystem-async-aws-s3": "^2.0",
-        "league/flysystem-aws-s3-v3": "^2.0",
+        "friends-of-behat/mink-extension": "^2.7",
+        "friends-of-behat/symfony-extension": "^2.3",
+        "friendsofphp/php-cs-fixer": "^3.11",
+        "guzzlehttp/guzzle": "^7.5",
+        "knplabs/knp-snappy": "^1.4",
+        "league/flysystem-async-aws-s3": "^2.5",
+        "league/flysystem-aws-s3-v3": "^2.5",
         "mailgun/mailgun-php": "^3.5",
-        "mpdf/mpdf": "^8.0",
+        "mpdf/mpdf": "^8.1",
         "okdewit/optimizely-php-sdk": "^4.0",
         "docraptor/docraptor": "^3",
-        "php-amqplib/php-amqplib": ">=2.9.0",
+        "php-amqplib/php-amqplib": ">=3.2.0",
         "phploc/phploc": "^7.0",
         "phpseclib/phpseclib": "^3.0",
         "phpspec/prophecy-phpunit": "^2.0",
-        "phpstan/phpstan": "^0.12.40",
+        "phpstan/phpstan": "^0.12.99",
         "phpunit/phpunit": "^9.5",
         "qossmic/deptrac-shim": "^0.17",
         "roave/security-advisories": "dev-master",
-        "symfony/messenger": "^6.0",
-        "symfony/phpunit-bridge": "^6.0",
-        "toin0u/digitalocean-v2": "^4.3",
+        "symfony/messenger": "^6.1",
+        "symfony/phpunit-bridge": "^6.1",
+        "toin0u/digitalocean-v2": "^4.5",
         "wildbit/postmark-php": "^4.0"
     },
     "config": {
