--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.13",
+        "doctrine/dbal": "^3.4",
         "elasticsearch/elasticsearch": "^7.17",
         "graylog2/gelf-php": "^1.7",
         "guzzlehttp/guzzle": "^7.5",
