--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "nyholm/psr7": "^1.5",
         "psr/http-client": "^1.0",
         "psr/http-message": "^1.0",
-        "ramsey/uuid-doctrine": "^1.8",
+        "ramsey/uuid-doctrine": "^1.8.1",
+        "ramsey/uuid":  "^4.5.1",
         "sendgrid/sendgrid": "~7.11",
         "sensio/framework-extra-bundle": "^6.1",
         "stripe/stripe-php": "^7.128",
