--- a/composer.json
+++ b/composer.json
@@ -5,22 +5,23 @@
         "php": ">=8.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "brick/money": "^0.5.0",
+        "brick/money": "^0.6",
         "chadhutchins/oauth2-slack": "^1.2.2",
+        "doctrine/dbal": "^3.4",
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.13",
-        "doctrine/dbal": "^3.4",
         "elasticsearch/elasticsearch": "^7.17",
         "graylog2/gelf-php": "^1.7",
         "guzzlehttp/guzzle": "^7.5",
         "knplabs/knp-snappy": "^1.4",
         "monolog/monolog": "^2.8",
         "nyholm/psr7": "^1.5",
+        "parthenon/transaction-cloud": "^0.1.0",
         "psr/http-client": "^1.0",
         "psr/http-message": "^1.0",
+        "ramsey/uuid": "^4.5.1",
         "ramsey/uuid-doctrine": "^1.8.1",
-        "ramsey/uuid":  "^4.5.1",
         "sendgrid/sendgrid": "~7.11",
         "sensio/framework-extra-bundle": "^6.1",
         "stripe/stripe-php": "^7.128",
