--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.2.0",
         "@fullhuman/postcss-purgecss": "^4.1.3",
+        "@parthenon/ui": "link:./js-packages/ui",
         "@parthenon/vue-menu": "link:./js-packages/vue-menu",
         "@tailwindcss/forms": "^0.5.2",
         "autoprefixer": "^10.4.8",
