Add env type for payment provider

--- a/.env
+++ b/.env
@@ -65,3 +65,4 @@ ELASTICSEARCH_HOST='http://elasticsearch:9200'
 
 TENANT_HOSTNAME=ha-local.xyz
 TENANT_DEFAULT_DATABASE=parthenon
+PAYMENT_PROVIDER=stripe
