--- a/.env
+++ b/.env
@@ -66,3 +66,6 @@ ELASTICSEARCH_HOST='http://elasticsearch:9200'
 TENANT_HOSTNAME=ha-local.xyz
 TENANT_DEFAULT_DATABASE=parthenon
 PAYMENT_PROVIDER=stripe
+
+TRANSACTION_CLOUD_API_KEY=
+TRANSACTION_CLOUD_API_KEY_PASSWORD=
