--- a/depfile.yaml
+++ b/depfile.yaml
@@ -15,6 +15,10 @@ layers:
     collectors:
       - type: directory
         regex: src/Parthenon/Common/*
+  - name: Export
+    collectors:
+      - type: directory
+        regex: src/Parthenon/Export/*
   - name: User
     collectors:
       - type: directory
@@ -54,6 +58,7 @@ ruleset:
     - Athena
   Athena:
     - Common
+    - Export
   User:
     - Common
     - Notification
