--- a/.env
+++ b/.env
@@ -29,6 +29,8 @@ REDIS_HOST="localhost"
 
 APPLICATION_URL="http://localhost"
 
+ATHENA_HOST="athena.local"
+
 STRIPE_PRIVATE_API_KEY=""
 STRIPE_PUBLIC_API_KEY=""
 STRIPE_WEBHOOK_SECRET=""
