--- a/composer.json
+++ b/composer.json
@@ -72,7 +72,8 @@
         "symfony/messenger": "^6.1",
         "symfony/phpunit-bridge": "^6.1",
         "toin0u/digitalocean-v2": "^4.5",
-        "wildbit/postmark-php": "^4.0"
+        "wildbit/postmark-php": "^4.0",
+        "symfony/web-profiler-bundle": "^6.1"
     },
     "config": {
         "optimize-autoloader": true,
