--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,7 @@
         "friends-of-behat/mink-browserkit-driver": "^1.4",
         "friends-of-behat/mink-extension": "^2.7",
         "friends-of-behat/symfony-extension": "^2.3",
-        "friendsofphp/php-cs-fixer": "^3.11.0",
+        "friendsofphp/php-cs-fixer": "3.12.0",
         "guzzlehttp/guzzle": "^7.5",
         "knplabs/knp-snappy": "^1.4",
         "league/flysystem-async-aws-s3": "^2.5",
