Add normalisers from Athena sections

--- a/config/packages/parthenon.yaml
+++ b/config/packages/parthenon.yaml
@@ -145,3 +145,5 @@ parthenon:
             team_invite:
               limit: 5
               description: "Number of users"
+  export:
+    enabled: true
