[User] Add toogable setting to log user in after signup - #9

--- a/config/packages/parthenon.yaml
+++ b/config/packages/parthenon.yaml
@@ -84,6 +84,7 @@ parthenon:
     teams_enabled: true
     login_route: "parthenon_user_login"
     teams_invites_enabled: true
+    signed_in_after_signup: false
   notification:
     enabled: true
     email:
