--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "phpoffice/phpspreadsheet": "^1.25",
         "psr/http-client": "^1.0",
         "psr/http-message": "^1.0",
-        "ramsey/uuid": "^4.5.1",
+        "ramsey/uuid": "^4.5.1",flys
         "ramsey/uuid-doctrine": "^1.8.1",
         "sendgrid/sendgrid": "~7.11",
         "sensio/framework-extra-bundle": "^6.1",
@@ -44,7 +44,8 @@
         "symfony/webpack-encore-bundle": "^1.15",
         "symfony/yaml": "^6.1",
         "twig/extra-bundle": "^3.4",
-        "twig/twig": "^3.4"
+        "twig/twig": "^3.4",
+        "symfony/messenger": "^6.1"
     },
     "require-dev": {
         "behat/behat": "^3.11",
@@ -71,7 +72,6 @@
         "phpunit/phpunit": "^9.5",
         "qossmic/deptrac-shim": "^0.17",
         "roave/security-advisories": "dev-master",
-        "symfony/messenger": "^6.1",
         "symfony/phpunit-bridge": "^6.1",
         "toin0u/digitalocean-v2": "^4.5",
         "wildbit/postmark-php": "^4.0",
