--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "phpoffice/phpspreadsheet": "^1.25",
         "psr/http-client": "^1.0",
         "psr/http-message": "^1.0",
-        "ramsey/uuid": "^4.5.1",flys
+        "ramsey/uuid": "^4.5.1",
         "ramsey/uuid-doctrine": "^1.8.1",
         "sendgrid/sendgrid": "~7.11",
         "sensio/framework-extra-bundle": "^6.1",
