--- a/.env
+++ b/.env
@@ -65,6 +65,14 @@ ELASTICSEARCH_HOST='http://elasticsearch:9200'
 
 TENANT_HOSTNAME=ha-local.xyz
 TENANT_DEFAULT_DATABASE=parthenon
+
+AWS_S3_KEY=
+AWS_S3_SECRET=
+AWS_S3_REGION=
+AWS_S3_ENDPOINT=
+AWS_S3_BUCKET=
+UPLOAD_ACCESS_URL=
+
 PAYMENT_PROVIDER=stripe
 
 TRANSACTION_CLOUD_API_KEY=
