[Payments] Add Transaction.Cloud support as a payment provider (#27)

--- a/.env
+++ b/.env
@@ -29,8 +29,6 @@ REDIS_HOST="localhost"
 
 APPLICATION_URL="http://localhost"
 
-ATHENA_HOST="athena.local"
-
 STRIPE_PRIVATE_API_KEY=""
 STRIPE_PUBLIC_API_KEY=""
 STRIPE_WEBHOOK_SECRET=""
@@ -74,3 +72,8 @@ AWS_S3_REGION=
 AWS_S3_ENDPOINT=
 AWS_S3_BUCKET=
 UPLOAD_ACCESS_URL=
+
+PAYMENT_PROVIDER=stripe
+
+TRANSACTION_CLOUD_API_KEY=
+TRANSACTION_CLOUD_API_KEY_PASSWORD=
