--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         "knplabs/knp-snappy": "^1.4",
         "monolog/monolog": "^2.8",
         "nyholm/psr7": "^1.5",
-        "parthenon/transaction-cloud": "^0.1.0",
         "phpoffice/phpspreadsheet": "^1.25",
+        "parthenon/transaction-cloud": "dev-main",
         "psr/http-client": "^1.0",
         "psr/http-message": "^1.0",
         "ramsey/uuid": "^4.5.1",
@@ -33,10 +33,9 @@
         "symfony/expression-language": "^6.1",
         "symfony/flex": "^1.19",
         "symfony/form": "^6.1",
-        "symfony/framework-bundle": "^6.1.7",
+        "symfony/framework-bundle": "^6.1",
         "symfony/mailer": "6.*",
         "symfony/monolog-bundle": "^3.8",
-        "symfony/redis-messenger": "6.1.*",
         "symfony/security-bundle": "^6.1",
         "symfony/translation": "^6.1",
         "symfony/twig-bundle": "^6.1",
@@ -44,8 +43,7 @@
         "symfony/webpack-encore-bundle": "^1.15",
         "symfony/yaml": "^6.1",
         "twig/extra-bundle": "^3.4",
-        "twig/twig": "^3.4",
-        "symfony/messenger": "^6.1"
+        "twig/twig": "^3.4"
     },
     "require-dev": {
         "behat/behat": "^3.11",
@@ -55,7 +53,7 @@
         "friends-of-behat/mink-browserkit-driver": "^1.4",
         "friends-of-behat/mink-extension": "^2.7",
         "friends-of-behat/symfony-extension": "^2.3",
-        "friendsofphp/php-cs-fixer": "3.12.0",
+        "friendsofphp/php-cs-fixer": "^3.11.0",
         "guzzlehttp/guzzle": "^7.5",
         "knplabs/knp-snappy": "^1.4",
         "league/flysystem-async-aws-s3": "^2.5",
@@ -72,6 +70,7 @@
         "phpunit/phpunit": "^9.5",
         "qossmic/deptrac-shim": "^0.17",
         "roave/security-advisories": "dev-master",
+        "symfony/messenger": "^6.1",
         "symfony/phpunit-bridge": "^6.1",
         "toin0u/digitalocean-v2": "^4.5",
         "wildbit/postmark-php": "^4.0",
@@ -125,7 +124,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "6.1.*"
+            "require": "6.*"
         }
     }
 }
