--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,6 +23,7 @@ services:
             - '../src/Kernel.php'
             - '../src/Tests/'
             - '../src/Parthenon/'
+            - '../src/Obol/'
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
