[Billing] Add entity alias

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -18,6 +18,7 @@ doctrine:
         resolve_target_entities:
             Parthenon\User\Entity\UserInterface: App\Entity\User
             Parthenon\User\Entity\TeamInterface: App\Entity\Team
+            Parthenon\Billing\Entity\CustomerInterface: App\Entity\Team
             Parthenon\MultiTenancy\Entity\TenantInterface: App\Entity\Tenant
         entity_managers:
             default:
