--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "brick/money": "^0.6",
         "chadhutchins/oauth2-slack": "^1.2.2",
+        "doctrine/annotations": "^1.0",
         "doctrine/dbal": "^3.4",
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
@@ -17,8 +18,10 @@
         "knplabs/knp-snappy": "^1.4",
         "monolog/monolog": "^2.8",
         "nyholm/psr7": "^1.5",
-        "phpoffice/phpspreadsheet": "^1.25",
         "parthenon/transaction-cloud": "dev-main",
+        "phpdocumentor/reflection-docblock": "^5.3",
+        "phpoffice/phpspreadsheet": "^1.25",
+        "phpstan/phpdoc-parser": "^1.15",
         "psr/http-client": "^1.0",
         "psr/http-message": "^1.0",
         "ramsey/uuid": "^4.5.1",
@@ -36,7 +39,10 @@
         "symfony/framework-bundle": "^6.1",
         "symfony/mailer": "6.*",
         "symfony/monolog-bundle": "^3.8",
+        "symfony/property-access": "6.*",
+        "symfony/property-info": "6.*",
         "symfony/security-bundle": "^6.1",
+        "symfony/serializer": "6.*",
         "symfony/translation": "^6.1",
         "symfony/twig-bundle": "^6.1",
         "symfony/validator": "^6.1",
