--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "symfony/flex": "^1.19",
         "symfony/form": "^6.1",
         "symfony/framework-bundle": "^6.1",
+        "symfony/security-bundle": "^6.1",
         "symfony/mailer": "6.*",
         "symfony/monolog-bundle": "^3.8",
         "symfony/property-access": "6.*",
