Update migration and composer

--- a/ansible/roles/web/tasks/setup.yml
+++ b/ansible/roles/web/tasks/setup.yml
@@ -51,6 +51,8 @@
     - php8.1-mysql
     - php8.1-redis
     - php8.1-pgsql
+    - php8.1-gd
+    - php8.1-mongodb
     - pkg-php-tools
 
 - name: install composer
