--- a/composer.json
+++ b/composer.json
@@ -37,12 +37,12 @@
         "symfony/flex": "^1.19",
         "symfony/form": "^6.1",
         "symfony/framework-bundle": "^6.1",
-        "symfony/security-bundle": "^6.1",
         "symfony/mailer": "6.*",
         "symfony/monolog-bundle": "^3.8",
         "symfony/property-access": "6.*",
         "symfony/property-info": "6.*",
         "symfony/security-bundle": "^6.1",
+        "symfony/security-core": "^6.1",
         "symfony/serializer": "6.*",
         "symfony/translation": "^6.1",
         "symfony/twig-bundle": "^6.1",
