--- a/config/packages/parthenon.yaml
+++ b/config/packages/parthenon.yaml
@@ -102,8 +102,32 @@ parthenon:
       stripe:
         private_api_key: '%env(resolve:STRIPE_PRIVATE_API_KEY)%'
         # public_api_key: '%env(resolve:STRIPE_PUBLIC_API_KEY)%'
+    plan:
+      Free:
+        is_free: true
+        user_count: 1
+        features:
+          - send_pdf
+        limit:
+          team_invite:
+            limit: 1
+            description: "Number of users"
+      Basic:
+        user_count: 1
+        features:
+          - send_pdf
+        limit:
+          team_invite:
+            limit: 1
+            description: "Number of users"
+      Standard:
+        user_count: 5
+        limit:
+          team_invite:
+            limit: 5
+            description: "Number of users"
   payments:
-    enabled: true
+    enabled: false
     provider: transaction_cloud
     transaction_cloud:
       api_key: '%env(resolve:TRANSACTION_CLOUD_API_KEY)%'
