--- a/.env
+++ b/.env
@@ -21,8 +21,8 @@ APP_SECRET=f9181c3938316e5c864fd0e3ec4d2460
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
-DATABASE_URL=pgsql://appuser:apppassword@localhost:5432/parthenon
-TIMESCALE_URL=pgsql://appuser:apppassword@localhost:5432/parthenon
+DATABASE_URL=pgsql://appuser:apppassword@database:5432/parthenon
+TIMESCALE_URL=pgsql://appuser:apppassword@timescaledb:5432/parthenon
 ###< doctrine/doctrine-bundle ###
 
 REDIS_HOST="localhost"
