[Billing] Add test for payment list

--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -18,6 +18,7 @@ default:
 
                 # Billing
                 - App\Tests\Behat\Qa\Billing\MainContext
+                - App\Tests\Behat\Qa\Billing\PaymentsContext
 
 
                 # User
