[Billing] Set default currencies

--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ REDIS_HOST="localhost"
 
 APPLICATION_URL="http://localhost"
 
-STRIPE_PRIVATE_API_KEY=""
+STRIPE_PRIVATE_API_KEY="holder"
 STRIPE_PUBLIC_API_KEY=""
 STRIPE_WEBHOOK_SECRET=""
 
