[Billing] Use cached plan manager

--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ DATABASE_URL=pgsql://appuser:apppassword@database:5432/parthenon
 TIMESCALE_URL=pgsql://appuser:apppassword@timescaledb:5432/parthenon
 ###< doctrine/doctrine-bundle ###
 
-REDIS_HOST="localhost"
+REDIS_HOST="redis"
 
 APPLICATION_URL="http://localhost"
 
