--- a/config/packages/parthenon.yaml
+++ b/config/packages/parthenon.yaml
@@ -97,6 +97,7 @@ parthenon:
     enabled: true
   billing:
     enabled: true
+    plan_management: athena
     payments:
       provider: stripe
       stripe:
