--- a/config/packages/parthenon.yaml
+++ b/config/packages/parthenon.yaml
@@ -115,12 +115,12 @@ parthenon:
             description: "Number of users"
       Basic:
         prices:
-          yearly:
-            usd:
+          year:
+            USD:
               amount: 100
               price_id: price_1LIrP2IfxpuZtqIzh46OvQ3J
-          monthly:
-            usd:
+          month:
+            USD:
               amount: 10
               price_id: price_1LIrP2IfxpuZtqIzT3zJRvXS
         user_count: 1
@@ -133,12 +133,12 @@ parthenon:
       Standard:
         user_count: 5
         prices:
-          monthly:
-            usd:
+          month:
+            USD:
               amount: 25
               price_id: price_1LIrYJIfxpuZtqIz8Fm3qARE
           yearly:
-            usd:
+            USD:
               amount: 250
               price_id: price_1LIrYJIfxpuZtqIz8Fm3qARE
         limit:
