--- a/config/packages/parthenon.yaml
+++ b/config/packages/parthenon.yaml
@@ -137,7 +137,7 @@ parthenon:
             USD:
               amount: 25
               price_id: price_1LIrYJIfxpuZtqIz8Fm3qARE
-          yearly:
+          year:
             USD:
               amount: 250
               price_id: price_1LIrYJIfxpuZtqIz8Fm3qARE
