--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -19,6 +19,7 @@ doctrine:
             Parthenon\User\Entity\UserInterface: App\Entity\User
             Parthenon\User\Entity\TeamInterface: App\Entity\Team
             Parthenon\Billing\Entity\CustomerInterface: App\Entity\Team
+            Parthenon\Billing\Entity\BillingAdminInterface: App\Entity\User
             Parthenon\MultiTenancy\Entity\TenantInterface: App\Entity\Tenant
         entity_managers:
             default:
