--- a/config/services_test.yaml
+++ b/config/services_test.yaml
@@ -8,3 +8,5 @@ services:
 
     Parthenon\Notification\EmailSenderInterface: '@Parthenon\Notification\Sender\NullEmailSender'
     Parthenon\MultiTenancy\TenantProvider\TenantProviderInterface: '@App\Qa\MultiTenant\Test\TestCurrentTenantProvider'
+
+    Obol\Provider\ProviderInterface: '@App\Dummy\Provider\Provider'
