--- a/config/services.yaml
+++ b/config/services.yaml
@@ -127,3 +127,5 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    Parthenon\Billing\Factory\EntityFactoryInterface: '@App\Billing\EntityFactory'
