[Billing] Tweak doctrine mappings

--- a/composer.json
+++ b/composer.json
@@ -30,17 +30,18 @@
         "sendgrid/sendgrid": "~7.11",
         "sensio/framework-extra-bundle": "^6.1",
         "stripe/stripe-php": "^7.128",
-        "symfony/asset": "^6.1",
-        "symfony/console": "^6.1",
-        "symfony/dotenv": "^6.1",
-        "symfony/event-dispatcher": "^6.1",
-        "symfony/expression-language": "^6.1",
+        "symfony/asset": "^6.3",
+        "symfony/console": "^6.3",
+        "symfony/dotenv": "^6.3",
+        "symfony/event-dispatcher": "^6.3",
+        "symfony/expression-language": "^6.3",
         "symfony/flex": "^1.19",
         "symfony/form": "^6.1",
         "symfony/framework-bundle": "^6.1",
         "symfony/intl": "6.*",
         "symfony/mailer": "6.*",
         "symfony/monolog-bundle": "^3.8",
+        "symfony/doctrine-bridge": "^6.3",
         "symfony/property-access": "6.*",
         "symfony/property-info": "6.*",
         "symfony/security-bundle": "^6.1",
