--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "graylog2/gelf-php": "^1.7",
         "guzzlehttp/guzzle": "^7.5",
         "knplabs/knp-snappy": "^1.4",
-        "monolog/monolog": "^2.9",
+        "monolog/monolog": "^3.0",
         "nyholm/psr7": "^1.5",
         "parthenon/transaction-cloud": "dev-main",
         "phpdocumentor/reflection-docblock": "^5.3",
@@ -29,47 +29,47 @@
         "ramsey/uuid-doctrine": "^1.8.1",
         "sendgrid/sendgrid": "~7.11",
         "stripe/stripe-php": "^7.128",
-        "symfony/asset": "^6.3",
-        "symfony/console": "^6.3",
-        "symfony/dotenv": "^6.3",
-        "symfony/event-dispatcher": "^6.3",
-        "symfony/expression-language": "^6.3",
+        "symfony/asset": "^7.0",
+        "symfony/console": "^7.0",
+        "symfony/dotenv": "^7.0",
+        "symfony/event-dispatcher": "^7.0",
+        "symfony/expression-language": "^7.0",
         "symfony/flex": "^1.19",
-        "symfony/form": "^6.1",
-        "symfony/framework-bundle": "^6.1",
-        "symfony/intl": "6.*",
-        "symfony/mailer": "6.*",
-        "symfony/monolog-bundle": "^3.8",
-        "symfony/doctrine-bridge": "^6.3",
-        "symfony/property-access": "6.*",
-        "symfony/property-info": "6.*",
-        "symfony/security-bundle": "^6.1",
-        "symfony/security-core": "^6.1",
-        "symfony/serializer": "6.*",
-        "symfony/translation": "^6.1",
-        "symfony/twig-bundle": "^6.1",
-        "symfony/validator": "^6.1",
-        "symfony/webpack-encore-bundle": "^1.15",
-        "symfony/yaml": "^6.1",
+        "symfony/form": "^7.0",
+        "symfony/framework-bundle": "^7.0",
+        "symfony/intl": "^7.0",
+        "symfony/mailer": "^7.0",
+        "symfony/monolog-bundle": ">=v3.8.0",
+        "symfony/doctrine-bridge": "^7.0",
+        "symfony/property-access": "^7.0",
+        "symfony/property-info": "^7.0",
+        "symfony/security-bundle": "^7.0",
+        "symfony/security-core": "^7.0",
+        "symfony/serializer": "^7.0",
+        "symfony/translation": "^7.0",
+        "symfony/twig-bundle": "^7.0",
+        "symfony/validator": "^7.0",
+        "symfony/webpack-encore-bundle": "^2.1.1",
+        "symfony/yaml": "^7.0",
         "twig/extra-bundle": "^3.4",
         "twig/twig": "^3.4"
     },
     "require-dev": {
         "behat/behat": "^3.11",
         "dg/bypass-finals": "~1.3.0",
-        "doctrine/mongodb-odm-bundle": "^4.5",
+        "doctrine/mongodb-odm-bundle": "^5.0",
         "friends-of-behat/mink": "^1.10",
         "friends-of-behat/mink-browserkit-driver": "^1.4",
         "friends-of-behat/mink-extension": "^2.7",
         "friends-of-behat/symfony-extension": "^2.3",
-        "friendsofphp/php-cs-fixer": "3.12.0",
+        "friendsofphp/php-cs-fixer": "^v3.14.4",
         "guzzlehttp/guzzle": "^7.5",
         "knplabs/knp-snappy": "^1.4",
         "league/flysystem-async-aws-s3": "^2.5",
         "league/flysystem-aws-s3-v3": "^2.5",
         "mailgun/mailgun-php": "^3.5",
         "mpdf/mpdf": "^8.1",
-        "okdewit/optimizely-php-sdk": "^4.0",
+        "optimizely/optimizely-sdk": "^4.0.1",
         "docraptor/docraptor": "^3",
         "php-amqplib/php-amqplib": ">=3.2.0",
         "phploc/phploc": "^7.0",
@@ -79,11 +79,11 @@
         "phpunit/phpunit": "^9.5",
         "qossmic/deptrac-shim": "^1.0",
         "roave/security-advisories": "dev-master",
-        "symfony/messenger": "^6.1",
-        "symfony/phpunit-bridge": "^6.1",
+        "symfony/messenger": "^7.0",
+        "symfony/phpunit-bridge": "^7.0",
         "toin0u/digitalocean-v2": "^4.5",
         "wildbit/postmark-php": "^4.0",
-        "symfony/web-profiler-bundle": "^6.1.6"
+        "symfony/web-profiler-bundle": "^7.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -136,7 +136,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "6.*"
+            "require": "7.*"
         }
     }
 }
