--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -4,35 +4,35 @@ app_backoffice:
 
 controllers:
     resource: ../../src/Controller/
-    type: annotation
+    type: attribute
 
 qa_controllers:
     resource: ../../src/Qa/Controller/
-    type: annotation
+    type: attribute
 
 kernel:
     resource: ../../src/Kernel.php
-    type: annotation
+    type: attribute
 
 parthenon_user_controllers:
     prefix: /api
     resource: ../../src/Parthenon/User/Controller/
-    type: annotation
+    type: attribute
 
 parthenon_billing_controllers:
     prefix: /api
     resource: ../../src/Parthenon/Billing/Controller/
-    type: annotation
+    type: attribute
 
 parthenon_payments_controllers:
     prefix: /api
     resource: ../../src/Parthenon/Payments/Controller/
-    type: annotation
+    type: attribute
 
 parthenon_multi_tenancy_controllers:
     resource: ../../src/Parthenon/MultiTenancy/Controller/
-    type: annotation
+    type: attribute
 
 parthenon_ab_testing_controllers:
     resource: ../../src/Parthenon/AbTesting/Controller/
-    type: annotation
+    type: attribute
