--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-redis": "*",
+        "billabear/php-sdk": "dev-main",
         "brick/money": "^0.6",
         "chadhutchins/oauth2-slack": "^1.2.2",
         "doctrine/annotations": "^1.14",
@@ -31,6 +32,7 @@
         "stripe/stripe-php": "^7.128",
         "symfony/asset": "^7.0",
         "symfony/console": "^7.0",
+        "symfony/doctrine-bridge": "^7.0",
         "symfony/dotenv": "^7.0",
         "symfony/event-dispatcher": "^7.0",
         "symfony/expression-language": "^7.0",
@@ -40,7 +42,6 @@
         "symfony/intl": "^7.0",
         "symfony/mailer": "^7.0",
         "symfony/monolog-bundle": ">=v3.8.0",
-        "symfony/doctrine-bridge": "^7.0",
         "symfony/property-access": "^7.0",
         "symfony/property-info": "^7.0",
         "symfony/security-bundle": "^7.0",
