Plan page fetches plans from BillaBear

--- a/.env
+++ b/.env
@@ -77,3 +77,6 @@ PAYMENT_PROVIDER=stripe
 
 TRANSACTION_CLOUD_API_KEY=
 TRANSACTION_CLOUD_API_KEY_PASSWORD=
+
+BILLABEAR_API_KEY=
+BILLABEAR_API_URL=
