--- a/config/packages/parthenon.yaml
+++ b/config/packages/parthenon.yaml
@@ -97,6 +97,10 @@ parthenon:
     enabled: true
   billing:
     enabled: true
+    billabear:
+      enabled: true
+      api_key: '%env(resolve:BILLABEAR_API_KEY)%'
+      api_url: '%env(resolve:BILLABEAR_API_URL)%'
     plan_management: config
     payments:
       provider: stripe
