[Obol] Add logger to obol factory

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -111,9 +111,9 @@ jobs:
           export PHP_CS_FIXER_IGNORE_ENV=1
           vendor/bin/php-cs-fixer fix src --dry-run
       #obol
-      #- name: Behat
-      #  run: |
-      #    vendor/bin/behat
+      - name: Behat
+        run: |
+          vendor/bin/behat
 
       - name: PHPUnit
         run: |
