--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@tailwindcss/forms": "^0.5.2",
         "autoprefixer": "^10.4.8",
         "axios": "^0.27.2",
+        "currency.js": "^2.0.4",
         "jest": "^29.0.2",
         "tailwindcss": "^3.1.8",
         "vue": "^3.2.36",
