--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
         "axios": "^0.27.2",
         "currency.js": "^2.0.4",
         "jest": "^29.0.2",
+        "js-file-download": "^0.4.12",
         "tailwindcss": "^3.1.8",
         "vue": "^3.2.36",
         "vue-i18n": "^9.2.2",
+        "vue-moment-v3": "^4.1.0",
         "vue-router": "^4.1.5",
         "vuex": "^4.0.2"
     }
