--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "ramsey/uuid": "^4.5.1",
         "ramsey/uuid-doctrine": "^1.8.1",
         "sendgrid/sendgrid": "~7.11",
-        "stripe/stripe-php": "^7.128",
+        "stripe/stripe-php": "^v15.10.0",
         "symfony/asset": "^7.0",
         "symfony/console": "^7.0",
         "symfony/doctrine-bridge": "^7.0",
